--- a/manifest.json
+++ b/manifest.json
@@ -10,12 +10,12 @@
     "orientation": "portrait-primary",
     "icons": [
         {
-            "src": "/icon-192x192.png",
+            "src": "/favicon-192x192.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "/icon-512x512.png",
+            "src": "/favicon-512x512.png",
             "sizes": "512x512",
             "type": "image/png"
         }
